--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="">
-                <img src="/__resources/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                <img src="__resources/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,10 +54,10 @@
                     <div class="carousel slide" id="slideshow-carousel-1" data-ride="carousel" data-interval="5000">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="/__resources/macbook-air.png" alt="First slide">
+                                <img class="d-block w-100" src="__resources/macbook-air.png" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="/__resources/phone.png" alt="Second slide">
+                                <img class="d-block w-100" src="__resources/phone.png" alt="Second slide">
                             </div>
                         </div>
                     </div>
