--- a/faq/index.html
+++ b/faq/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="../">
-                <img src="../__resources/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                <img src="../img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
