--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         </div>
     </div>
 
+    <div class="container">
+        <h1>nginvite.com is maintained by nginvite teams.</h1>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
