--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles/main.css" type="text/css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="vendor/bootstrap-4.3.1/css/bootstrap.min.css" type="text/css">
+
     <title>Nginvite</title>
 </head>
 
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="signin">LOGIN</a>
                     <li class="nav-item">
                         <a class="nav-link" href="signup">REGISTER</a>
-                     </li>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -62,16 +62,42 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6">
-                    <h1 class="display-4 title">Nginvite.com</h1>
-                    <p class="lead">Buat Undangan Online 100% Gratis.</p>
+                <div class="col-sm-8 col-md-8 col-lg-6">
+                    <h1 class="h1 title">Nginvite.com</h1>
+                    <p class="lead description-title font-weight-thin">Buat <span class="font-weight-normal">Undangan
+                            Online</span> Anda Sekarang <br>100% Gratis.</p>
+                    <a href="#" class="btn btn-lg btn-primary anim-slideup" id="buatSekarang">
+                        <i class="icon-apple icon-3x pull-left"></i>
+                        <span class="font-btn-small font-weight-thin align-middle">Buat Sekarang &rarr;</span>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="container">
+        <div class="row">
+            <div class="card-feature col-lg-9 mx-auto">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm">
+                                One of three columns
+                            </div>
+                            <div class="col-sm">
+                                One of three columns
+                            </div>
+                            <div class="col-sm">
+                                One of three columns
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <h1>nginvite.com is maintained by nginvite teams.</h1>
+
     </div>
 
     <!-- Optional JavaScript -->
