--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -82,13 +86,37 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-sm">
-                                One of three columns
+                                <img src="img/save-money.svg" alt="Hemat Biaya" height="70px" width="auto">
+                                <div class="text-benefit mx-auto">
+                                    <h5 class="h5 title">Hemat Biaya</h5>
+                                    <p>Lorem ipsum dolor sit, amet
+                                        consectetur
+                                        adipisicing
+                                        elit. Exercitationem in
+                                        quibusdam.</p>
+                                </div>
                             </div>
                             <div class="col-sm">
-                                One of three columns
+                                <img src="img/logo.svg" alt="Hemat Biaya" height="70px" width="auto">
+                                <div class="text-benefit">
+                                    <h5>Hemat Biaya</h5>
+                                    <p>Lorem ipsum dolor sit, amet
+                                        consectetur
+                                        adipisicing
+                                        elit. Exercitationem in
+                                        quibusdam.</p>
+                                </div>
                             </div>
                             <div class="col-sm">
-                                One of three columns
+                                <img src="img/logo.svg" alt="Hemat Biaya" height="70px" width="auto">
+                                <div class="text-benefit">
+                                    <h5>Hemat Biaya</h5>
+                                    <p>Lorem ipsum dolor sit, amet
+                                        consectetur
+                                        adipisicing
+                                        elit. Exercitationem in
+                                        quibusdam.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
