--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
+    <!-- Material Icon -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -66,14 +69,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-8 col-md-8 col-lg-6">
-                    <h1 class="h1 title">Nginvite.com</h1>
-                    <p class="lead description-title font-weight-thin">Buat <span class="font-weight-normal">Undangan
-                            Online</span> Anda Sekarang <br>100% Gratis.</p>
-                    <a href="#" class="btn btn-lg btn-primary anim-slideup" id="buatSekarang">
-                        <i class="icon-apple icon-3x pull-left"></i>
-                        <span class="font-btn-small font-weight-thin align-middle">Buat Sekarang &rarr;</span>
-                    </a>
+                <div class="col-sm-12 col-md-12 col-lg-6">
+                    <div class="col-md-12 col-lg-12 col-sm-12">
+                        <h1 class="h1 title text-center text-sm-left">Nginvite.com</h1>
+                        <p class="lead description-title font-weight-thin text-center text-sm-left ">Bikin <span
+                                class="font-weight-normal">Undangan
+                                Online</span> Anda Sekarang <br>100% Gratis.</p>
+                    </div>
+                    <div class="col-md-12 col-lg-12 col-sm-6  text-center text-sm-left">
+                        <a href="#" class="btn btn-lg btn-primary anim-slideup" id="buatSekarang">
+                            <i class="icon-apple icon-3x pull-left"></i>
+                            <span class="font-btn-small font-weight-thin align-middle">Bikin Sekarang
+                                &nbsp;&#10142;</span>
+                        </a>
+                    </div>
+                    <div class="col-md-8 col-lg-12 col-sm-6  text-center text-sm-left">
+                        <a href="#" id="lihatDemo">
+                            <div class="font-btn-small font-weight-thin align-middle">
+                                <i class="material-icons md-18">
+                                    play_arrow
+                                </i> <span>Lihat Demo</span>
+                            </div>
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -83,12 +102,12 @@
         <div class="row">
             <div class="card-feature col-lg-9 mx-auto">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card-body card-body-feature  text-lg-left">
                         <div class="row">
                             <div class="col-sm">
-                                <img src="img/save-money.svg" alt="Hemat Biaya" height="70px" width="auto">
-                                <div class="text-benefit mx-auto">
-                                    <h5 class="h5 title">Hemat Biaya</h5>
+                                <img src="img/savemoney.png" alt="Hemat Biaya" height="50px" width="auto">
+                                <div class="text-benefit">
+                                    <h5 class="medium-title">Hemat Biaya</h5>
                                     <p>Lorem ipsum dolor sit, amet
                                         consectetur
                                         adipisicing
@@ -97,9 +116,9 @@
                                 </div>
                             </div>
                             <div class="col-sm">
-                                <img src="img/logo.svg" alt="Hemat Biaya" height="70px" width="auto">
+                                <img src="img/fast.png" alt="Hemat Biaya" height="50px" width="auto">
                                 <div class="text-benefit">
-                                    <h5>Hemat Biaya</h5>
+                                    <h5 class="medium-title">Mudah dan cepat</h5>
                                     <p>Lorem ipsum dolor sit, amet
                                         consectetur
                                         adipisicing
@@ -108,9 +127,9 @@
                                 </div>
                             </div>
                             <div class="col-sm">
-                                <img src="img/logo.svg" alt="Hemat Biaya" height="70px" width="auto">
+                                <img src="img/interest.png" alt="Hemat Biaya" height="50px" width="auto">
                                 <div class="text-benefit">
-                                    <h5>Hemat Biaya</h5>
+                                    <h5 class="medium-title">Fitur Menarik</h5>
                                     <p>Lorem ipsum dolor sit, amet
                                         consectetur
                                         adipisicing
@@ -124,7 +143,20 @@
             </div>
         </div>
 
-        <h1>nginvite.com is maintained by nginvite teams.</h1>
+        <div class="col-md-6 mx-auto">
+            <h4 class="medium-title text-center" style="margin-top: 80px;">
+                Rencanakan pesta anda, berikan informasi terbaik untuk semua orang yang anda cintai.
+            </h4>
+        </div>
+        <div class="col-md-8 mx-auto">
+            <p class="text-secondary text-center">Lorem ipsum dolor sit, amet
+                consectetur
+                adipisicing
+                elit. Exercitationem in
+                quibusdam.</p>
+        </div>
+
+        <div style="height: 300px;"></div>
 
     </div>
 
