--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
                         <a class="nav-link active" href="">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="product">PRODUCT</a>
+                        <a class="nav-link" href="#product">PRODUCT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="faq">FAQ</a>
+                        <a class="nav-link" href="#faq">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="signin">LOGIN</a>
+                        <a class="nav-link" href="#signin">LOGIN</a>
                     <li class="nav-item">
-                        <a class="nav-link" href="signup">REGISTER</a>
+                        <a class="nav-link" href="#signup">REGISTER</a>
                     </li>
                 </ul>
             </div>
@@ -369,7 +369,8 @@
 
                             <ul class="list-unstyled text-white">
                                 <li>
-                                    <a href="#" class="link-contact" class="link-contacts">
+                                    <a href="mailto:haerul.muttaqin@gmail.com" class="link-contact"
+                                        class="link-contacts">
                                         <div class="font-btn-small font-weight-thin align-middle">
                                             <i class="material-icons md-18">
                                                 mail
@@ -378,7 +379,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="link-contact" class="link-contacts">
+                                    <a href="tel:+6282199838282" class="link-contact" class="link-contacts">
                                         <div class="font-btn-small font-weight-thin align-middle">
                                             <i class="material-icons md-18">
                                                 phone
@@ -399,14 +400,16 @@
 
                             <ul class="list-unstyled text-white">
                                 <li>
-                                    <a href="#" class="link-contact" class="link-contacts">
+                                    <a target="_blank" href="https://www.instagram.com/nginvite" class="link-contact"
+                                        class="link-contacts">
                                         <div class="font-btn-small font-weight-thin align-middle">
                                             <span>Instagram</span>
                                         </div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="link-contact" class="link-contacts">
+                                    <a target="_blank" href="https://www.facebook.com/Nginvitecom-242987239727375"
+                                        class="link-contact" class="link-contacts">
                                         <div class="font-btn-small font-weight-thin align-middle">
                                             <span>Facebook</span>
                                         </div>
