--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+
+<meta name="google-site-verification" content="BoqrF70kx71frWRWSpVrzzz75ikLG4ZaJd90vqUuiOs" />
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
