--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
 
-<meta name="google-site-verification" content="BoqrF70kx71frWRWSpVrzzz75ikLG4ZaJd90vqUuiOs" />
-
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
@@ -14,7 +12,27 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta content="#6200ff" name="theme-color">
+
+    <meta itemprop="icon" content="img/logo.svg">
+    <meta itemprop="name" content="Nginvite.com">
+    <meta itemprop="url" content="https://nginvite.com">
+    <meta itemprop="description" content="Undangan Digital (Online) Gratis 100%">
+
+
+    <meta property="og:title" content="Nginvite.com" />
+    <meta property="og:description" content="Undangan Digital (Online) Gratis 100%" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nginvite.com/" />
+
+    <meta name="icon" content="img/logo.svg">
+    <meta name="name" content="Nginvite.com">
+    <meta name="url" content="https://nginvite.com">
+    <meta name="description" content="Undangan Digital (Online) Gratis 100%">
+
+    <meta name="google-site-verification" content="BoqrF70kx71frWRWSpVrzzz75ikLG4ZaJd90vqUuiOs" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles/main.css" type="text/css">
@@ -462,14 +480,17 @@
         });
     </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132942028-5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132942028-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-132942028-5');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-132942028-5');
+    </script>
 
 </body>
 
