--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <meta name="url" content="https://nginvite.com">
     <meta name="description" content="Undangan Digital (Online) Gratis 100%">
 
+    <meta name="rating" content="adult" />
+    <meta name="rating" content="RTA-5042-1996-1400-1577-RTA" />
+
     <meta name="google-site-verification" content="BoqrF70kx71frWRWSpVrzzz75ikLG4ZaJd90vqUuiOs" />
 
     <!-- Custom CSS -->
