--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="vendor/bootstrap-4.3.1/css/bootstrap.min.css" type="text/css">
 
-    <title>Nginvite</title>
+    <title>Nginvite - Undangan Online Gratis</title>
 </head>
 
 <body>
