--- a/index.html
+++ b/index.html
@@ -102,14 +102,15 @@
                                 Online</span> Kamu Sekarang <br>100% Gratis.</p>
                     </div>
                     <div class="col-md-12 col-lg-12 col-sm-6  text-center text-sm-left">
-                        <a href="#" class="btn btn-lg btn-primary anim-slideup" id="buatSekarang">
+                        <a href="https://api.whatsapp.com/send?phone=6282199838282&text=Saya%20mau%20bikin%20undangan%20"
+                                target="_blank" class="btn btn-lg btn-primary anim-slideup">
                             <i class="icon-apple icon-3x pull-left"></i>
                             <span class="font-btn-small font-weight-thin align-middle">Bikin Sekarang
                                 &nbsp;&#10142;</span>
                         </a>
                     </div>
                     <div class="col-md-8 col-lg-12 col-sm-6  text-center text-sm-left">
-                        <a href="#" id="lihatDemo">
+                        <a href="#demo">
                             <div class="font-btn-small font-weight-thin align-middle">
                                 <i class="material-icons md-18">
                                     play_arrow
@@ -228,7 +229,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="demo">
         <section style="margin-top: 160px">
             <div class="col-md-12 mx-auto">
                 <h3 class="title text-center">Demo Undangan</h3>
@@ -342,8 +343,8 @@
                                     <div class="align-items-center" style="margin-top:-10px; margin-bottom: 20px;">
                                         <span class="text-secondary align-middle" style="float: right;">Hubungi —
                                             &nbsp;&nbsp;</span>
-                                        <a href="#"
-                                            class="btn btn-lg btn-success-border anim-slideup text-center align-middle"
+                                        <a href="https://api.whatsapp.com/send?phone=6282199838282&text=Saya%20mau%20tanya%20undangan%20"
+                                           class="btn btn-lg btn-success-border anim-slideup text-center align-middle"
                                             style="float: right;">
                                             <span class="font-btn-small font-weight-thin align-middle">Customer
                                                 Service</span>
