--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
                     </div>
                     <div class="col-md-8 col-lg-12 col-sm-6  text-center text-sm-left">
                         <a href="#demo">
-                            <div class="font-btn-small font-weight-thin align-middle">
-                                <i class="material-icons md-18">
-                                    play_arrow
-                                </i> <span>Lihat Demo</span>
-                            </div>
+                            <div class="font-btn-small font-weight-thin align-middle mt-2">
+<i class="material-icons md-18 align-middle" style="
+">
+play_arrow
+</i> <span class="align-middle">Lihat Demo</span>
+</div>
                         </a>
                     </div>
 
