--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 &nbsp;&#10142;</span>
                         </a>
                     </div>
-                    <div class="col-md-8 col-lg-12 col-sm-6  text-center text-sm-left">
+                    <!--<div class="col-md-8 col-lg-12 col-sm-6  text-center text-sm-left">
                         <a href="#demo">
                             <div class="font-btn-small font-weight-thin align-middle mt-2">
 <i class="material-icons md-18 align-middle" style="
@@ -118,7 +118,7 @@ play_arrow
 </i> <span class="align-middle">Lihat Demo</span>
 </div>
                         </a>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
