--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 Online</span> Kamu Sekarang <br>100% Gratis.</p>
                     </div>
                     <div class="col-md-12 col-lg-12 col-sm-6  text-center text-sm-left">
-                        <a href="https://api.whatsapp.com/send?phone=6282199838282&text=Saya%20mau%20bikin%20undangan%20"
+                        <a href="https://api.whatsapp.com/send?phone=6282199838282&text=Hai,%20mau%20nanya%20dong%20(mengenai%20undangan)%20"
                                 target="_blank" class="btn btn-lg btn-primary anim-slideup">
                             <i class="icon-apple icon-3x pull-left"></i>
                             <span class="font-btn-small font-weight-thin align-middle">Bikin Sekarang
