--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <h1 class="h1 title text-center text-sm-left">Nginvite.com</h1>
                         <p class="lead description-title font-weight-thin text-center text-sm-left ">Bikin <span
                                 class="font-weight-normal">Undangan
-                                Online</span> Kamu Sekarang <br>100% Gratis.</p>
+                                Online</span> Kamu Sekarang <br>100% Gratis!</p>
                     </div>
                     <div class="col-md-12 col-lg-12 col-sm-6  text-center text-sm-left">
                         <a href="https://api.whatsapp.com/send?phone=6282199838282&text=Hai,%20mau%20nanya%20dong%20(mengenai%20undangan)%20"
