--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="">HOME</a>
+                        <a class="nav-link active" href="">HOME PAGE</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#product">PRODUCT</a>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="col-md-12 col-lg-12 col-sm-6  text-center text-sm-left">
                         <a href="https://api.whatsapp.com/send?phone=6282199838282&text=Hai,%20mau%20nanya%20dong%20(mengenai%20undangan)%20"
-                                target="_blank" class="btn btn-lg btn-primary anim-slideup">
+                            target="_blank" class="btn btn-lg btn-primary anim-slideup">
                             <i class="icon-apple icon-3x pull-left"></i>
                             <span class="font-btn-small font-weight-thin align-middle">Bikin Sekarang
                                 &nbsp;&#10142;</span>
@@ -345,7 +345,7 @@ play_arrow
                                         <span class="text-secondary align-middle" style="float: right;">Hubungi —
                                             &nbsp;&nbsp;</span>
                                         <a href="https://api.whatsapp.com/send?phone=6282199838282&text=Saya%20mau%20tanya%20undangan%20"
-                                           class="btn btn-lg btn-success-border anim-slideup text-center align-middle"
+                                            class="btn btn-lg btn-success-border anim-slideup text-center align-middle"
                                             style="float: right;">
                                             <span class="font-btn-small font-weight-thin align-middle">Customer
                                                 Service</span>
@@ -469,13 +469,13 @@ play_arrow
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="vendor/bootstrap-4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+        </script>
     <script>
         $(document).ready(function () {
             $('#demo1').tooltip();
